infra-tools/adminer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
  labels:
    app: adminer
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: adminer
  type: ClusterIP
